from __future__ import annotations

from datetime import date, datetime, time

from sqlalchemy import (
    Boolean,
    CheckConstraint,
    Date,
    DateTime,
    ForeignKey,
    Identity,
    Integer,
    SmallInteger,
    String,
    Time,
)
from sqlalchemy.orm import Mapped, mapped_column, relationship

from .base import Base
from .common import StatusDisponibilidadeMedico

# =========================================================
# Pessoa
# =========================================================


class Pessoa(Base):
    __tablename__ = "pessoa"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
        init=False,
    )
    nome: Mapped[str] = mapped_column(String(200), nullable=False)
    data_nascimento: Mapped[date | None] = mapped_column(Date, nullable=True)
    sexo: Mapped[str | None] = mapped_column(String(1))
    cpf: Mapped[str] = mapped_column(String(11))
    email: Mapped[str] = mapped_column(String(200), nullable=False)

    medico: Mapped[Medico | None] = relationship(back_populates="pessoa", init=False)
    paciente: Mapped[Paciente | None] = relationship(
        back_populates="pessoa", init=False
    )
    telefones: Mapped[list[Telefone]] = relationship(
        back_populates="pessoa", init=False
    )
    documentos: Mapped[list[Documento]] = relationship(
        back_populates="pessoa", init=False
    )


# =========================================================
# Médico
# =========================================================


class Medico(Base):
    __tablename__ = "medico"

    id: Mapped[int] = mapped_column(primary_key=True)
    crm: Mapped[str] = mapped_column(String(20), nullable=False)
    uf_crm: Mapped[str] = mapped_column(String(2), nullable=False)

    data_criacao: Mapped[datetime] = mapped_column(default=datetime.utcnow)
    data_inativacao: Mapped[datetime | None] = mapped_column(
        DateTime, nullable=True, init=False
    )

    id_pessoa: Mapped[int | None] = mapped_column(ForeignKey("pessoa.id"), init=False)
    pessoa: Mapped[Pessoa | None] = relationship(back_populates="medico", init=False)

    consultas: Mapped[list[Consulta]] = relationship(
        back_populates="medico", init=False
    )
    especialidades: Mapped[list[MedicoEspecialidade]] = relationship(
        back_populates="medico", init=False
    )
    disponibilidades: Mapped[list[DisponibilidadeMedico]] = relationship(
        back_populates="medico", init=False
    )
    procedimentos: Mapped[list[Procedimento]] = relationship(
        back_populates="medico", init=False
    )
    medico_procedimentos: Mapped[list[MedicoProcedimento]] = relationship(
        back_populates="medico", init=False
    )


# =========================================================
# Disponibilidade do Médico
# =========================================================


class DisponibilidadeMedico(Base):
    __tablename__ = "disponibilidade_medico"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
        init=False,
    )
    id_medico: Mapped[int] = mapped_column(ForeignKey("medico.id"))

    data_inicio: Mapped[date] = mapped_column(Date, nullable=False)
    data_fim: Mapped[date] = mapped_column(Date, nullable=False)
    hora_inicio: Mapped[time] = mapped_column(Time, nullable=False)
    hora_fim: Mapped[time] = mapped_column(Time, nullable=False)
    dia_semana: Mapped[int] = mapped_column(SmallInteger)
    status: Mapped[int] = mapped_column(
        SmallInteger,
        nullable=False,
        default=StatusDisponibilidadeMedico.LIVRE.value,
    )

    medico: Mapped[Medico] = relationship(back_populates="disponibilidades", init=False)

    __table_args__ = (
        CheckConstraint("status in (0, 1, 2)", name="ck_disponibilidade_status"),
    )


# =========================================================
# TipoEspecialidade
# =========================================================


class TipoEspecialidade(Base):
    __tablename__ = "tipo_especialidade"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
        init=False,
    )
    descricao: Mapped[str] = mapped_column(String(200), nullable=False)
    duracao_consulta_padrao: Mapped[int] = mapped_column(Integer, nullable=False)

    # embedding pgvector (campo genérico por enquanto)
    embedding: Mapped[str | None] = mapped_column(String, nullable=True, init=False)

    consultas: Mapped[list[Consulta]] = relationship(
        back_populates="tipo_especialidade", init=False
    )
    medico_especialidades: Mapped[list[MedicoEspecialidade]] = relationship(
        back_populates="tipo_especialidade", init=False
    )


# =========================================================
# MedicoEspecialidade
# =========================================================


class MedicoEspecialidade(Base):
    __tablename__ = "medico_especialidade"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
    )
    id_medico: Mapped[int] = mapped_column(ForeignKey("medico.id"))
    id_tipo_especialidade: Mapped[int] = mapped_column(
        ForeignKey("tipo_especialidade.id")
    )

    duracao_consulta: Mapped[int] = mapped_column(Integer, nullable=False)
    data_criacao: Mapped[datetime] = mapped_column(default=datetime.utcnow)
    data_inativacao: Mapped[datetime | None] = mapped_column(
        DateTime, nullable=True, init=False
    )

    medico: Mapped[Medico] = relationship(back_populates="especialidades", init=False)
    tipo_especialidade: Mapped[TipoEspecialidade] = relationship(
        back_populates="medico_especialidades", init=False
    )


# =========================================================
# Consulta
# =========================================================


class Consulta(Base):
    __tablename__ = "consulta"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
        init=False,
    )
    id_funcionario: Mapped[int] = mapped_column(Integer)
    id_paciente: Mapped[int] = mapped_column(Integer)
    id_tipo_especialidade: Mapped[int] = mapped_column(
        ForeignKey("tipo_especialidade.id")
    )
    id_medico: Mapped[int | None] = mapped_column(ForeignKey("medico.id"))

    data_consulta: Mapped[datetime] = mapped_column(DateTime)
    observacao: Mapped[str | None] = mapped_column(String, nullable=True)

    data_criacao: Mapped[datetime] = mapped_column(default=datetime.utcnow)
    data_inativacao: Mapped[datetime | None] = mapped_column(
        DateTime, nullable=True, init=False
    )

    medico: Mapped[Medico | None] = relationship(back_populates="consultas", init=False)
    tipo_especialidade: Mapped[TipoEspecialidade] = relationship(
        back_populates="consultas", init=False
    )


# =========================================================
# TipoProcedimento
# =========================================================


class TipoProcedimento(Base):
    __tablename__ = "tipo_procedimento"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
    )
    descricao: Mapped[str] = mapped_column(String(200), nullable=False)

    embedding: Mapped[str | None] = mapped_column(String, nullable=True)

    procedimentos: Mapped[list[Procedimento]] = relationship(
        back_populates="tipo_procedimento"
    )
    medico_procedimentos: Mapped[list[MedicoProcedimento]] = relationship(
        back_populates="tipo_procedimento"
    )


# =========================================================
# Procedimento
# =========================================================


class Procedimento(Base):
    __tablename__ = "procedimento"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
    )
    id_medico: Mapped[int | None] = mapped_column(ForeignKey("medico.id"))
    id_tipo_procedimento: Mapped[int] = mapped_column(
        ForeignKey("tipo_procedimento.id")
    )

    observacao: Mapped[str | None] = mapped_column(String, nullable=True)

    medico: Mapped[Medico | None] = relationship(back_populates="procedimentos")
    tipo_procedimento: Mapped[TipoProcedimento] = relationship(
        back_populates="procedimentos"
    )


# =========================================================
# MedicoProcedimento
# =========================================================


class MedicoProcedimento(Base):
    __tablename__ = "medico_procedimento"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
    )
    id_medico: Mapped[int] = mapped_column(ForeignKey("medico.id"))
    id_tipo_procedimento: Mapped[int] = mapped_column(
        ForeignKey("tipo_procedimento.id")
    )

    data: Mapped[date] = mapped_column(Date)

    medico: Mapped[Medico] = relationship(back_populates="medico_procedimentos")
    tipo_procedimento: Mapped[TipoProcedimento] = relationship(
        back_populates="medico_procedimentos"
    )


# =========================================================
# Telefone
# =========================================================


class Telefone(Base):
    __tablename__ = "telefone"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
    )
    id_pessoa: Mapped[int] = mapped_column(ForeignKey("pessoa.id"))

    numero: Mapped[str] = mapped_column(String(20))
    ddd: Mapped[int] = mapped_column(SmallInteger)

    data_criacao: Mapped[datetime] = mapped_column(default=datetime.utcnow)
    data_inativacao: Mapped[datetime | None] = mapped_column(
        DateTime, nullable=True, init=False
    )

    pessoa: Mapped[Pessoa] = relationship(back_populates="telefones", init=False)


# =========================================================
# Paciente
# =========================================================


class Paciente(Base):
    __tablename__ = "paciente"

    id_pessoa: Mapped[int] = mapped_column(
        ForeignKey("pessoa.id"),
        primary_key=True,
    )

    pessoa: Mapped[Pessoa] = relationship(back_populates="paciente")
    ativo: Mapped[bool] = mapped_column(Boolean, default=True)

    def as_dict(self) -> dict[str, str | date | None]:
        return {
            "cpf": self.pessoa.cpf,
            "nome": self.pessoa.nome,
            "data_nascimento": self.pessoa.data_nascimento,
            "sexo": self.pessoa.sexo,
            "email": self.pessoa.email,
        }


# =========================================================
# Documento
# =========================================================


class Documento(Base):
    __tablename__ = "documento"

    id: Mapped[int] = mapped_column(
        Integer,
        Identity(
            start=1, increment=1
        ),  # gera IDENTITY (por padrão é GENERATED BY DEFAULT)
        primary_key=True,
    )
    id_tipo_documento: Mapped[int] = mapped_column(Integer)
    id_pessoa: Mapped[int] = mapped_column(ForeignKey("pessoa.id"))

    numero: Mapped[str] = mapped_column(String(50))
    pessoa: Mapped[Pessoa] = relationship(back_populates="documentos")


__all__ = [
    "Consulta",
    "DisponibilidadeMedico",
    "Documento",
    "Medico",
    "MedicoEspecialidade",
    "MedicoProcedimento",
    "Paciente",
    "Pessoa",
    "Procedimento",
    "Telefone",
    "TipoEspecialidade",
    "TipoProcedimento",
]
