erDiagram

    PESSOA {
        int id PK
        string nome
        date data_nascimento
        string sexo
        string cpf
        string email
    }

    MEDICO {
        int id PK
        string crm
        string uf_crm
        datetime data_criacao
        datetime data_inativacao
        int id_pessoa FK
    }

    PACIENTE {
        int id_pessoa PK, FK
        boolean ativo
    }

    TELEFONE {
        int id PK
        int id_pessoa FK
        string numero
        int ddd
    }

    DOCUMENTO {
        int id PK
        int id_pessoa FK
        int id_tipo_documento
        string numero
    }

    DISPONIBILIDADE_MEDICO {
        int id PK
        int id_medico FK
        date data_inicio
        date data_fim
        time hora_inicio
        time hora_fim
        int dia_semana
        int status
    }

    TIPO_ESPECIALIDADE {
        int id PK
        string descricao
        int duracao_consulta_padrao
        string embedding
    }

    MEDICO_ESPECIALIDADE {
        int id PK
        int id_medico FK
        int id_tipo_especialidade FK
        int duracao_consulta
        datetime data_criacao
        datetime data_inativacao
    }

    CONSULTA {
        int id PK
        int id_funcionario
        int id_paciente
        int id_tipo_especialidade FK
        int id_medico FK
        datetime data_consulta
        string observacao
    }

    TIPO_PROCEDIMENTO {
        int id PK
        string descricao
        string embedding
    }

    PROCEDIMENTO {
        int id PK
        int id_medico FK
        int id_tipo_procedimento FK
        string observacao
    }

    MEDICO_PROCEDIMENTO {
        int id PK
        int id_medico FK
        int id_tipo_procedimento FK
        date data
    }

    %% RELACIONAMENTOS

    PESSOA ||--o| MEDICO : "possui"
    PESSOA ||--o| PACIENTE : "é"
    PESSOA ||--o{ TELEFONE : "tem"
    PESSOA ||--o{ DOCUMENTO : "tem"

    MEDICO ||--o{ DISPONIBILIDADE_MEDICO : "define"
    MEDICO ||--o{ CONSULTA : "realiza"
    MEDICO ||--o{ MEDICO_ESPECIALIDADE : "possui"
    MEDICO ||--o{ PROCEDIMENTO : "executa"
    MEDICO ||--o{ MEDICO_PROCEDIMENTO : "associa"

    TIPO_ESPECIALIDADE ||--o{ MEDICO_ESPECIALIDADE : "relaciona"
    TIPO_ESPECIALIDADE ||--o{ CONSULTA : "classifica"

    TIPO_PROCEDIMENTO ||--o{ PROCEDIMENTO : "define"
    TIPO_PROCEDIMENTO ||--o{ MEDICO_PROCEDIMENTO : "define"